# NEO_AME_Scanner

./: .gitignore  Design_Manifesto.md  README.md  initial_development_plan.md  requirements.txt  test_factory_pattern.py
.trae/documents/: scanner_implementation_plan.md
new_prepare/OasisPCS/: CONTRIBUTING.md  README.md  README_TRAIN.md  RELEASE_SAM3p1.md
new_prepare/SpatialLM-main/: .gitignore  EXAMPLE.md  FINETUNE.md  README.md  eval.py  inference.py  pyproject.toml  train.py  visualize.py
new_prepare/SpatialLM-main/configs/: spatiallm_sft.yaml
new_prepare/SpatialLM-main/docs/: object_categories.md
new_prepare/SpatialLM-main/spatiallm/: __init__.py
new_prepare/SpatialLM-main/spatiallm/layout/: entity.py  layout.py
new_prepare/SpatialLM-main/spatiallm/model/: __init__.py  scenescript_encoder.py  sonata_encoder.py  spatiallm_llama.py  spatiallm_qwen.py
new_prepare/SpatialLM-main/spatiallm/pcd/: __init__.py  pcd_loader.py  transform.py
new_prepare/SpatialLM-main/spatiallm/tuner/: create_dataset.py  initialize_weight.py  trainer.py
new_prepare/SpatialLM-main/spatiallm/tuner/data/: __init__.py  collator.py  converter.py  formatter.py  loader.py  mm_plugin.py  template.py
new_prepare/SpatialLM-main/spatiallm/tuner/framework/: adapter.py  callbacks.py  loader.py  logging.py  patcher.py  utils.py
new_prepare/SpatialLM-main/spatiallm/tuner/hparams/: __init__.py  data_args.py  finetuning_args.py  model_args.py  parser.py  training_args.py
new_prepare/SpatialLM-main/spatiallm/tuner/network/: __init__.py  attention.py  checkpointing.py  rope.py
new_prepare/cycles-main/: CMakeLists.txt
src/input/: BaseLoader.py  LoaderFactory.py  PLYLoader.py  README.md  __init__.py  example_usage.py  models.py  sample_usage.py
tests/unit/: test_ply_loader.py  test_sample.py
(+54 files in other folders)
